kube-prometheus-stack/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
  namespace: monitoring
spec:
  hosts:
    - grafana.local.gwg313.xyz
    - grafana.zerotier.gwg313.xyz
  gateways:
    - grafana-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: prometheus-grafana
            port:
              number: 80
